delete user bug fix
